version/0.19/_sources/api/solver/_autosummary/settings/settings_1.rst.txt
:orphan:

.. _settings_1:

settings
========

.. autoclass:: ansys.fluent.core.solver.settings_241.settings_1.settings
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   =============================================================================================================

Attribute                                                                                                                                                                                  Summary

==================================================================================   =============================================================================================================
:ref:`degassing_verbosity <degassing_verbosity>`                                         Set the verbosity level of the total mass flow rate at the degassing boundary. The acceptable values are:

:ref:`mass_flow <mass_flow>`                                                                                                                         Select method for setting the mass flow rate.

:ref:`pressure_outlet <pressure_outlet_1>`                                                                                     Select pressure specification method on pressure-outlet boundaries.

:ref:`pressure_far_field <pressure_far_field_1>`                                                                                              Select presure-far-field boundary-condition options.

:ref:`physical_velocity_porous_formulation <physical_velocity_porous_formulation>`                            Enables the physical velocity (rather than superficial velocity) porous formulation.

:ref:`target_mass_flow_rate_settings <target_mass_flow_rate_settings>`                                                                             Enter the targeted mass flow rate setting menu.

:ref:`advanced <advanced_1>`                                                                                                                                Control settings while doing BC setup.

==================================================================================   =============================================================================================================

.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

